Fix two column layout on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -8096,6 +8096,14 @@ nav.tabs {
     width: 100%;
   }
 }
+.layout.layout--twocol-section--67-33, .layout.layout--twocol-section--33-67 {
+  display: block;
+}
+@media (min-width: 850px) {
+  .layout.layout--twocol-section--67-33, .layout.layout--twocol-section--33-67 {
+    display: flex;
+  }
+}
 .layout.layout--twocol-section--67-33 .layout__region--first,
 .layout.layout--twocol-section--67-33 .layout__region--second, .layout.layout--twocol-section--33-67 .layout__region--first,
 .layout.layout--twocol-section--33-67 .layout__region--second {
@@ -8149,9 +8157,11 @@ nav.tabs {
 }
 .layout.layout--twocol-section--67-33 .layout__region--second {
   flex: 0 1 33%;
+  min-width: 33%;
 }
 .layout.layout--twocol-section--33-67 .layout__region--first {
   flex: 1 1 33%;
+  min-width: 33%;
 }
 .layout.layout--twocol-section--33-67 .layout__region--second {
   flex: 0 1 67%;
@@ -8163,6 +8173,14 @@ nav.tabs {
   }
   .layout.layout--twocol-section--33-67 .layout__region--second {
     flex: 1 1 67%;
+  }
+}
+.layout.layout--twocol-section--75-25, .layout.layout--twocol-section--25-75 {
+  display: block;
+}
+@media (min-width: 900px) {
+  .layout.layout--twocol-section--75-25, .layout.layout--twocol-section--25-75 {
+    display: flex;
   }
 }
 .layout.layout--twocol-section--75-25.rtlb:not(.layout-builder__layout), .layout.layout--twocol-section--25-75.rtlb:not(.layout-builder__layout) {
@@ -8213,6 +8231,7 @@ nav.tabs {
 }
 .layout.layout--twocol-section--75-25 .layout__region--second {
   flex: 0 1 25%;
+  min-width: 25%;
 }
 .layout.layout--twocol-section--75-25.wlar:not(.layout-builder__layout) {
   display: block;
@@ -8262,6 +8281,7 @@ nav.tabs {
 }
 .layout.layout--twocol-section--25-75 .layout__region--first {
   flex: 0 1 25%;
+  min-width: 25%;
 }
 .layout.layout--twocol-section--25-75 .layout__region--second {
   flex: 1 1 75%;
