--- a/scss/_drupal-bootstrap.scss
+++ b/scss/_drupal-bootstrap.scss
@@ -668,6 +668,10 @@ nav.tabs {
     }
     &.layout--twocol-section--67-33,
     &.layout--twocol-section--33-67 {
+        display: block;
+        @include breakpoint(850px) {
+            display: flex;
+        }
         .layout__region--first,
         .layout__region--second {
             flex: 1 100%;
@@ -718,11 +722,13 @@ nav.tabs {
         }
         .layout__region--second {
             flex: 0 1 33%;
+            min-width: 33%;
         }
     }
     &.layout--twocol-section--33-67 {
         .layout__region--first {
             flex: 1 1 33%;
+            min-width: 33%;
         }
         .layout__region--second {
             flex: 0 1 67%;
@@ -739,6 +745,10 @@ nav.tabs {
     }
     &.layout--twocol-section--75-25,
     &.layout--twocol-section--25-75 {
+        display: block;
+        @include breakpoint(900px) {
+            display: flex;
+        }
         &.rtlb:not(.layout-builder__layout) {
             display: flex;
             >.layout__region--first {
@@ -785,6 +795,7 @@ nav.tabs {
         }
         .layout__region--second {
             flex: 0 1 25%;
+            min-width: 25%;
         }
         &.wlar:not(.layout-builder__layout) {
             display: block;
@@ -834,6 +845,7 @@ nav.tabs {
     &.layout--twocol-section--25-75 {
         .layout__region--first {
             flex: 0 1 25%;
+            min-width: 25%;
         }
         .layout__region--second {
             flex: 1 1 75%;
